Initial version of flight rpc server with java client example